--- a/assets/htmlTemplates/index.html
+++ b/assets/htmlTemplates/index.html
@@ -13,6 +13,8 @@
         </select>
     <br> <br>
         <input type="submit" value="Submit">
+    <br> <br>
+        <input type="submit" name="download" value="Download">
     </form>
     
        <div class="output"><pre>{{.UserInput}}</pre></div>
