--- a/assets/htmlTemplates/template.html
+++ b/assets/htmlTemplates/template.html
@@ -5,28 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/docs/style.css" rel="stylesheet"/> 
+    <link href="/assets/style.css" rel="stylesheet"/>
     <!-- CSS only -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
 
     <title>Ascii Art Web</title>
 </head>
-<body >
+<body>
     <div class="container">
         <div class="box_header">
-            <header >
+            <header>
                 <h1>Ascii Art Web <br>Stylize</h1>
             </header>
         </div>
+        <div class="info">
+            <h2>The Web page transforms the text into a graphical representation of ASCII based on chosen font</h2>
+        </div>
 
         <div class="bubbles">
-            <img src="/docs/images/bubble.png">
-            <img src="/docs/images/bubble.png">
-            <img src="/docs/images/bubble.png">
-            <img src="/docs/images/bubble.png">
-            <img src="/docs/images/bubble.png">
-            <img src="/docs/images/bubble.png">
-            <img src="/docs/images/bubble.png">
+            <img src="assets/images/bubble.gif">
+            <img src="assets/images/bubble.gif">
+            <img src="assets/images/bubble.gif">
+            <img src="assets/images/bubble.gif">
+            <img src="assets/images/bubble.gif">
+            <img src="assets/images/bubble.gif">
+            <img src="assets/images/bubble.gif">
             
         </div>
         {{end}}
