--- a/assets/htmlTemplates/template.html
+++ b/assets/htmlTemplates/template.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="box_header">
             <header>
-                <h1>Ascii Art Web <br>Stylize</h1>
+                <h1>Ascii Art Web</h1>
             </header>
         </div>
         <div class="info">
